# webappanalyzer

./: .gitignore  Cargo.toml  LICENSE-MIT
.github/workflows/: tests.yml
src/: category.rs  group.rs  lib.rs
src/tech/: check.rs  mod.rs  parse.rs
tests/: parse.rs
